--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_custom_clippers: ^2.0.0
+  font_awesome_flutter: ^9.2.0
+  http: ^0.13.3
+  dartz: ^0.10.1-nullsafety.2
+  bot_toast: ^4.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
