--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_custom_clippers: ^2.0.0
   font_awesome_flutter: ^9.2.0
   http: ^0.13.3
+  provider: ^6.0.1
   dartz: ^0.10.1-nullsafety.2
   bot_toast: ^4.0.1
   intl: ^0.17.0
