--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^0.13.3
   provider: ^6.0.1
   dartz: ^0.10.1-nullsafety.2
+  shared_preferences: ^2.0.11
   bot_toast: ^4.0.1
   intl: ^0.17.0
 
